# reticulum-meshv

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
android/: README.md  buildozer.spec
android/src/: main.py
android/src/RNS/: Channel.py  Discovery.py  Identity.py  Link.py  Reticulum.py  Transport.py  __init__.py
android/src/RNS/Cryptography/: Hashes.py
android/src/RNS/Interfaces/: AutoInterface.py  WeaveInterface.py
android/src/RNS/Utilities/: rnid.py  rnsd.py
android/src/RNS/Utilities/rngit/: commitsigs.py  pages.py  server.py
android/src/RNS/Utilities/rnsh/: initiator.py
mobile/: run-android.sh
mobile/reticulum_mesh/: build-android.sh  pyproject.toml
mobile/reticulum_mesh/src/reticulum_mesh/: __init__.py  __main__.py  app.py
mobile/reticulum_mesh/src/reticulum_mesh/resources/: __init__.py
src/: __init__.py  main.py
src/backend/: __init__.py  contact_manager.py  file_transfer_manager.py  identity_manager.py  lxmf_messenger.py  network_monitor.py  rns_node.py  tcp_bridge.py  telephony_manager.py
src/config/: theme.py
src/ui/: main_window.py
src/ui/widgets/: announces_widget.py  common.py  contacts_widget.py  file_manager_widget.py  identities_widget.py  identity_widget.py  interfaces_widget.py  messages_widget.py  network_widget.py  settings_widget.py  telephony_widget.py
tests/: sim_minimal.py  sim_node.py  simulation_test.py
