[project]
name = "reticulum-meshv"
version = "1.0.0"
description = "PyQt6-based Reticulum mesh networking application with advanced file sharing"
authors = [{name = "Developer"}]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["reticulum", "mesh", "pyqt6", "rns", "lxmf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "RNS>=1.3.5",
    "LXMF>=1.0.1",
    "LXST>=0.4.6",
    "PyQt6>=6.6.0",
    "aiohttp>=3.14.0",
    "websockets>=16.0",
    "psutil>=7.2.2",
    "pyserial>=3.5",
    "bleak>=3.0.2",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.7",
    "cbor2>=6.1.1",
    "Pillow>=10.0.0",
]

[project.scripts]
reticulum-meshv = "src.main:main"

[project.urls]
Homepage = "https://github.com/narl3yyy-svg/reticulum-meshv"
Repository = "https://github.com/narl3yyy-svg/reticulum-meshv.git"
Issues = "https://github.com/narl3yyy-svg/reticulum-meshv/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]