[project]
name = "reticulum-mesh-mobile"
version = "0.2.0"
description = "Reticulum-based mesh app for Android"
license = "GPL-3.0-or-later"

[tool.briefcase]
project_name = "Reticulum Mesh"
bundle = "com.narl3y.reticulummesh"
version = "0.2.0"

[tool.briefcase.app.reticulum_mesh]
formal_name = "Reticulum Mesh"
description = "Reticulum-based mesh app for Android"
icon = "src/reticulum_mesh/resources/icon"
sources = ["src/reticulum_mesh"]
requires = [
    "toga",
    "toga-android",
    "toga-core",
    "RNS",
    "LXMF",
]
