[project]
name = "rmeshv-mobile"
version = "1.0.0"
description = "RMESHV mesh networking app for Android"
license = "GPL-3.0-or-later"

[tool.briefcase]
project_name = "RMESHV"
bundle = "com.narl3y.reticulummesh"
version = "1.0.0"

[tool.briefcase.app.reticulum_mesh]
formal_name = "RMESHV"
description = "RMESHV mesh networking app for Android"
icon = "src/reticulum_mesh/resources/icon"
sources = ["src/reticulum_mesh"]
requires = [
    "toga",
    "toga-android",
    "toga-core",
    "RNS",
    "LXMF",
]


